syntax = "proto3";

package containerd.v1;

import "gogoproto/gogo.proto";


service DebuggerService {
	rpc DumpDebugInfo(CreateDebugRequest) returns (DebugResponse);
}

message CreateDebugRequest {
    bool stackDump = 1;
    bool   memInfo = 2;
}

message DebugResponse {
    string Version = 1;
	string GitCommit = 2;
	string StackDump = 3;
    MemInfo   memInfo = 4;
}

message MemInfo {
	uint64 Alloc       = 1;
	uint64 TotalAlloc  = 2;
	uint64 Sys         = 3;

	uint64 HeapAlloc  = 4;
	uint64 HeapSys    = 5;

	uint64 StackInuse  = 6;
	uint64 StackSys    = 7;
}
